# silicon

./: .dockerignore  .editorconfig  .flaskenv  .gitignore  .prettierignore  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: container-image.yaml  tests.yaml
deploy/: README.md
deploy/caddy-authelia/: .env-example  Caddyfile  README.md  configuration-example.yml  docker-compose.yaml
deploy/caddy-basic-auth/: .env-example  Caddyfile  README.md  docker-compose.yaml
docs/: main.md
notes/: __init__.py  commands.py  db.py  j2_filters.py  page.py  related.py  render.py  render_md.py  render_toc.py  schema.sql  views.py
notes/static/: package-lock.json  package.json
notes/static/css/: colors-light.css  edit.css  history.css  layout.css  main.css  print.css  search.css
notes/static/js/: edit.js  main.js  notes.js  widgets.js
notes/templates/: base.html.j2  edit.html.j2  history.html.j2  macros.html.j2  not_found.html.j2  related.html.j2  search.html.j2  view.html.j2
scripts/: dump.sh
silicon/: __init__.py  commands.py  db.py  export.py  exporter.py  importer.py  j2_filters.py  page.py  related.py  render_md.py  schema.sql  util.py  views.py
silicon/docs/: main.md  syntax.md
silicon/static/: package.json
silicon/static/css/: colors-light.css  colors.css  edit.css  history.css  layout.css  main.css  pygments.css  search.css
silicon/static/js/: edit.js  main.js  widgets.js
silicon/templates/: base.html.j2  docs.html.j2  edit.html.j2  history.html.j2  macros.html.j2  not_found.html.j2  search.html.j2  view.html.j2
tests/: conftest.py  test_notes.py  test_pages.py  test_related.py  test_toc.py  toc_in.md  toc_out.html
