[project]
name = "silicon-notes"
version = "0.1.3"
description = "A personal knowledge base with a wiki-like interface."
authors = [
    { name = "Charles Ulrich"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0",
    "gunicorn~=21.0",
    "mistune~=3.0",
    "pygments~=2.6.1",
    "python-dotenv~=1.0",
    "python-slugify~=8.0.0",
]

[project.urls]
Repository = "https://github.com/cu/silicon"

[dependency-groups]
dev = [
    "beautifulsoup4~=4.11.1",
    "flake8~=7.1",
    "pytest~=7.4.0",
    "watchdog~=3.0",
]
