[project]
name = "silicon-notes"
version = "0.1.4"
description = "A personal knowledge base with a wiki-like interface."
authors = [
    { name = "Charles Ulrich"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0",
    "gunicorn~=23.0",
    "mistune~=3.0",
    "pygments~=2.18",
    "python-dotenv~=1.0",
    "python-slugify~=8.0.0",
]

[project.urls]
Repository = "https://github.com/cu/silicon"

[dependency-groups]
dev = [
    "beautifulsoup4~=4.12",
    "flake8~=7.1",
    "pytest~=8.3.0",
    "watchdog~=6.0",
]
