[project]
name = "silicon-notes"
version = "0.1.5"
description = "A personal knowledge base with a wiki-like interface."
authors = [
    { name = "Charles Ulrich"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0",
    "gunicorn~=23.0",
    "mistune~=3.0",
    "pygments~=2.18",
    "python-dotenv~=1.0",
    "python-slugify~=8.0.0",
]

[project.urls]
Repository = "https://github.com/cu/silicon"

[dependency-groups]
dev = [
    "beautifulsoup4~=4.12",
    "flake8~=7.1",
    "poethepoet>=0.37.0",
    "pytest~=8.3.0",
    "watchdog~=6.0",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
init-db = "flask --app silicon init-db"
devserver = "flask --app silicon run --debug"
flake8 = "flake8 --show-source --exclude .venv"
npm-docker = """
docker run -ti
           --rm
           -v ${POE_CONF_DIR}/silicon/static:/app
           -w /app
           node:alpine
           npm ci
"""

[tool.poe.tasks.test]
cmd = "pytest"
env = { TMP = "/dev/shm" }

[tool.poe.tasks.npm]
cwd = "silicon/static"
cmd = "npm ci"

[tool.poe.tasks.export]
cmd = "flask --app silicon export"
verbosity = -1

[tool.poe.tasks.import]
cmd = "flask --app silicon import"
verbosity = -1
