[metadata]
name = Bityard-Notes
author = Charles Ulrich
version = 1.0.0
description = A wiki-like personal notes database
long_description = README.md
# license =
# keywords =
# classifiers =

# flesh this out more via the flaskr example, maybe

[options]
python_requires = >= 3.9
packages = find:
# include_package_data
install_requires =
    Werkzeug == 2.0.2
    Flask == 2.0.2
    python-dotenv == 0.19.2
    mistune == 0.8.4
    Pygments == 2.6.1
    python-slugify == 4.0.0

[options.extras_require]
dev =
    Werkzeug[watchdog] == 2.0.2

test =
    pytest

[tool:pytest]
testpaths = tests
